2006-05-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add -reserveScreenAreaOn:width:start:end:
	* Add skipTaskbarAndPager.
	* Use BSD license.
	* Initial import.
