@@ -3,11 +3,13 @@ include $(GNUSTEP_MAKEFILES)/common.make
 LIBRARY_NAME = XWindowServerKit
 
 XWindowServerKit_OBJC_FILES = \
+	XScreen.m \
 	XWindow.m 
 
 XWindowServerKit_LIBRARIES_DEPEND_UPON = -lX11 
 XWindowServerKit_HEADER_FILES_INSTALL_DIR = XWindowServerKit
 XWindowServerKit_HEADER_FILES = \
+	XScreen.h \
 	XWindow.h \
 	gnustep.h
 
