@@ -1,3 +1,8 @@
+2006-05-27 Yen-Ju Chen <yjchenx at gmail>
+
+	* Link to XWindowServerKit.
+	* Post XCurrentWorkspaceDidChangeNotification.
+
 2006-05-03 Yen-Ju Chen <yjchenx at gmail>
 
 	* AZClient.m: fix borderless.
