@@ -1,3 +1,7 @@
+2006-05-28 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+	* Add XScreen category.
+
 2006-05-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
 	* Add -reserveScreenAreaOn:width:start:end:
